syntax = "proto3";

option csharp_namespace = "_4E.gRPCDemo.Server.Protos";

import "google/protobuf/timestamp.proto";


message TrackingMessage 
{
	bytes deviceId =1 ;
	int32 speed =2 ;
	google.protobuf.Timestamp dateTime =3;
	repeated list list =4 ;
}

message TrackingResponse 
{
	bool Succsess =1 ;
}

message list
{
	string key = 1 ;
	string value =2 ;	 
}

message PlusMessage
{
	clientStatus status =1 ;
}

enum clientStatus{
	IsAvalible =0 ;
	Working = 1 ;
	Failed = 2;
}